--- a/backend/home/templates/home/landing_page.html
+++ b/backend/home/templates/home/landing_page.html
@@ -1,5 +1,5 @@
 <!-- templates/home/landing_page.html -->
-
+<link rel="stylesheet" href="{% static 'home/css/landing_page.css' %}">
 {% extends 'base.html' %}
 
 {% block content %}
